# sound-switcher

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp  version.h.in
include/sound/: lib.hpp
scripts/: download.sh
src/: CMakeLists.txt  lib.cpp
